Implement parsing NCT URL and get its MP3 stream

--- a/.jshintrc
+++ b/.jshintrc
@@ -15,5 +15,5 @@
 	"trailing": true,
 	"undef": true,
 	"unused": true,
-	"predef": ["Template", "Session", "Meteor"]
+	"predef": ["Template", "Session", "Meteor", "HTTP"]
 }
