--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,7 @@
 		"block-scoped-var"            : 1,
 		"camelcase"                   : 2,
 		"comma-style"                 :[2, "last" ],
-		"comma-dangle"                : 2,
+		"comma-dangle"                : 0,
 		"comma-spacing"               :[2, { "before": false, "after": true} ],
 		"curly"                       :[2, "all" ],
 		"dot-notation"                :[2, { "allowKeywords": true } ],
@@ -24,7 +24,7 @@
 		"no-multi-str"                : 2,
 		"no-new"                      : 2,
 		"no-proto"                    : 2,
-		"no-script-url"               : 2,
+		"no-script-url"               : 0,
 		"no-sequences"                : 2,
 		"no-shadow"                   : 2,
 		"no-with"                     : 2,
@@ -47,5 +47,13 @@
 		"meteor": true,
 		"jquery": true
 	},
-	"plugins": []
+	"plugins": [],
+	"parserOptions": {
+		"ecmaVersion": 6,
+		"sourceType": "module",
+		"ecmaFeatures": {
+			"impliedStrict": true,
+			"jsx": true
+		}
+	},
 }
