--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
 	"extends": "eslint:recommended",
 	"rules": {
 		"block-scoped-var"            : 1,
-		"camelcase"                   : 2,
+		"camelcase"                   :[2, {"properties": "never"}],
 		"comma-style"                 :[2, "last" ],
 		"comma-dangle"                : 0,
 		"comma-spacing"               :[2, { "before": false, "after": true} ],
