--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
-    "eslint-plugin-promise": "^3.3.0"
+    "eslint-plugin-promise": "^3.3.0",
+    "stylelint": "^8.1.1",
+    "stylelint-config-standard": "^17.0.0"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0"
