Fix a case when old bookings remain when the play list is left to run over night

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
 		"new-cap"                     :[2, { "capIsNew": false } ],
 		"no-bitwise"                  : 2,
 		"no-caller"                   : 2,
+		"no-case-declarations"        : 0,
 		"no-console"                  : 0,
 		"no-eval"                     : 2,
 		"no-invalid-this"             : 0,
