--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "stylelint-config-standard": "^17.0.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0"
+    "babel-runtime": "^6.26.0",
+    "flux": "^3.1.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
