--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,5 @@
-// Nau standard eslint rules
 {
-	"extends": "eslint:recommended",
+	"extends": ["nau-react"],
 	"rules": {
 		"block-scoped-var"            : 1,
 		"camelcase"                   :[2, {"properties": "never"}],
@@ -12,7 +11,6 @@
 		"eqeqeq"                      :[2, "allow-null" ],
 		"indent"                      :[2, "tab", {"SwitchCase": 1} ],
 		"linebreak-style"             :[2, "unix" ],
-		// must: new ClassFunction(); but allow: Component() (JSX component)
 		"new-cap"                     :[2, { "capIsNew": false } ],
 		"no-bitwise"                  : 2,
 		"no-caller"                   : 2,
@@ -38,8 +36,8 @@
 		"space-infix-ops"             : 2,
 		"space-unary-ops"             :[2, { "words": true }],
 		"strict"                      : 0,
-		"valid-jsdoc"                 : 2
-
+		"valid-jsdoc"                 : 2,
+		"react/prefer-stateless-function": 0
 	},
 	"globals": {
 		"Migrations": true
@@ -49,7 +47,7 @@
 		"meteor": true,
 		"jquery": true
 	},
-	"plugins": [],
+	"plugins": ["react"],
 	"parserOptions": {
 		"ecmaVersion": 8,
 		"sourceType": "module",
