--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "ios >= 8"
   ],
   "devDependencies": {
+    "eslint": "^4.13.1",
+    "eslint-config-nau-react": "^15.0.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-promise": "^3.3.0",
+    "eslint-plugin-react": "^7.5.1",
     "stylelint": "^8.1.1",
     "stylelint-config-standard": "^17.0.0"
   },
