add babel eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,7 @@
 		"es6": true
 	},
 	"plugins": ["react"],
+	"parser": "babel-eslint",
 	"parserOptions": {
 		"ecmaVersion": 8,
 		"sourceType": "module",
