--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nau-jukebox",
-  "version": "0.9",
+  "version": "0.9.0",
   "author": "Nau Studio",
   "license": "MIT",
   "repository": "https://github.com/naustudio/nau-jukebox",
@@ -11,6 +11,7 @@
     "ios >= 8"
   ],
   "devDependencies": {
+    "babel-eslint": "^8.0.3",
     "eslint": "^4.13.1",
     "eslint-config-nau-react": "^15.0.0",
     "eslint-plugin-import": "^2.8.0",
