--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "flux": "^3.1.3",
+    "proptypes": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
