--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "date-fns": "^1.29.0",
     "flux": "^3.1.3",
     "proptypes": "^1.1.0",
     "react": "^16.2.0",
