Add collection2 with simpl-schema; migrate global collection var to explicit imports; remove redundant meteor packages;

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,52 +1,22 @@
 {
 	"extends": ["nau-react"],
 	"rules": {
-		"block-scoped-var"            : 1,
-		"camelcase"                   :[2, {"properties": "never"}],
-		"comma-style"                 :[2, "last" ],
-		"comma-dangle"                : 0,
-		"comma-spacing"               :[2, { "before": false, "after": true} ],
-		"curly"                       :[2, "all" ],
-		"dot-notation"                : 0,
-		"eqeqeq"                      :[2, "allow-null" ],
-		"indent"                      :[2, "tab", {"SwitchCase": 1} ],
-		"linebreak-style"             :[2, "unix" ],
-		"new-cap"                     :[2, { "capIsNew": false } ],
-		"no-bitwise"                  : 2,
-		"no-caller"                   : 2,
-		"no-case-declarations"        : 0,
-		"no-console"                  : 0,
-		"no-eval"                     : 2,
-		"no-invalid-this"             : 0,
-		"no-iterator"                 : 2,
-		"no-loop-func"                : 2,
-		"no-multi-str"                : 2,
-		"no-new"                      : 2,
-		"no-proto"                    : 2,
-		"no-script-url"               : 0,
-		"no-sequences"                : 2,
-		"no-shadow"                   : 2,
-		"no-unused-vars"              :[2, { "args": "none" }],
-		"no-with"                     : 2,
-		"one-var"                     :[2, { "initialized": "never" }],
-		"quotes"                      :[2, "single" ],
-		"semi"                        :[2, "always" ],
-		"keyword-spacing"             : 2,
-		"space-before-blocks"         : 2,
-		"space-infix-ops"             : 2,
-		"space-unary-ops"             :[2, { "words": true }],
-		"strict"                      : 0,
-		"valid-jsdoc"                 : 2,
-		"import/no-extraneous-dependencies": 0,
-		"import/no-unresolved"		  : 0,
-		"import/extensions"			  : 0,
-		"react/prefer-stateless-function": 0
+		"comma-dangle"                      : 0,
+		"dot-notation"                      : 0,
+		"no-case-declarations"              : 0,
+		"no-console"                        : 0,
+		"no-invalid-this"                   : 0,
+		"no-script-url"                     : 0,
+		"strict"                            : 0,
+		"prefer-arrow-callback"             : 0,
+		"import/no-extraneous-dependencies" : 0,
+		"import/no-unresolved"              : 0,
+		"import/extensions"                 : 0,
+		"react/prefer-stateless-function"   : 0,
+		"import/prefer-default-export"      : 0
 	},
 	"globals": {
-		"Migrations": true,
-		"Trianglify": true,
-		"Songs": true,
-		"Users": true
+		"Trianglify": true
 	},
 	"env": {
 		"browser": true,
