--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "author": "Nau Studio",
   "license": "MIT",
   "repository": "https://github.com/naustudio/nau-jukebox",
+  "scripts": {
+    "lint": "eslint .",
+    "start": "meteor"
+  },
   "browserslist": [
     "defaults",
     "ie >= 10",
@@ -15,6 +19,7 @@
     "eslint": "^4.13.1",
     "eslint-config-nau-react": "^15.0.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-react": "^7.5.1",
     "stylelint": "^8.1.1",
@@ -24,8 +29,10 @@
     "babel-runtime": "^6.26.0",
     "date-fns": "^1.29.0",
     "flux": "^3.1.3",
+    "meteor-node-stubs": "^0.3.2",
     "proptypes": "^1.1.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "simpl-schema": "^1.3.0"
   }
 }
