--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "repository": "https://github.com/naustudio/nau-jukebox",
   "scripts": {
+    "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
     "lint": "eslint .",
     "start": "meteor"
   },
@@ -18,6 +19,8 @@
     "babel-eslint": "^8.0.3",
     "eslint": "^4.13.1",
     "eslint-config-nau-react": "^15.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-import-resolver-meteor": "^0.4.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-promise": "^3.3.0",
