--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "babel-runtime": "^6.26.0",
     "date-fns": "^1.29.0",
     "flux": "^3.1.3",
+    "history": "^4.7.2",
     "meteor-node-stubs": "^0.3.2",
     "proptypes": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
     "simpl-schema": "^1.3.0"
   }
 }
