Add Travis CI build config and status

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
 	"rules": {
 		"dot-notation"                      : 0,
 		"prefer-arrow-callback"             : 0,
+		"no-alert"                          : 0,
 		"import/extensions"                 : 0,
 		"import/no-extraneous-dependencies" : 0,
 		"import/prefer-default-export"      : 0,
