Add footer notes; Move github corner outside to have it sticky at viewport;

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "simpl-schema": "^1.3.0"
   }
 }
