--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "proptypes": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-ga": "^2.3.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "simpl-schema": "^1.3.0"
