Add settings.json and start script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "eslint-check": "eslint --print-config .eslintrc | eslint-config-prettier-check",
     "lint": "eslint .",
-    "start": "meteor",
+    "start": "meteor --settings settings.json",
     "test": "npm run lint"
   },
   "browserslist": [
